--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"npm:dev:frontend\" \"npm:server\"",
+    "dev:frontend": "next dev",
+    "server": "nodemon server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -36,10 +38,14 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "emoji-picker-react": "^4.9.2",
+    "express": "^4.19.2",
     "firebase": "^11.9.1",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.6.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
@@ -56,6 +62,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
