--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^4.19.2",
     "firebase": "^11.9.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.6.0",
     "next": "15.3.3",
