--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "dotenv": "^16.4.5",
     "emoji-picker-react": "^4.9.2",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "firebase": "^11.9.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
