--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "trackwise",
   "version": "0.1.0",
@@ -13,7 +12,8 @@
     "start:backend": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "audit:fix": "npm audit fix"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
